# planktonzilla

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  save_plankt.sh
.devcontainer/: Dockerfile  devcontainer.json  setup_env.sh
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
configs/: import_dataset.yaml  train.yaml  train_node.yaml  train_ood.yaml
configs/augmentation/: auto.yaml  autoaugment.yaml  default.yaml  manual.yaml  manual2.yaml  manual3.yaml  randaugment.yaml  trivialaugment.yaml
configs/custom_loss/: asymmetric.yaml  balanced_meta_softmax.yaml  default.yaml  focal.yaml  ldam.yaml  max_margin.yaml  ral.yaml
configs/dataset/: cifar10.yaml  default.yaml  flowcamnet.yaml  isiisnet.yaml  jedi-taxo.yaml  jedi_oceans.yaml  lensless-taxo.yaml  lensless.yaml  planktonzilla.yaml  uvp6net.yaml  whoi-plankton.yaml  whoi-taxo.yaml  zoolake copy.yaml  zoolake-taxo.yaml  zoolake.yaml  zooscannet-taxo.yaml  zooscannet.yaml  zooscannet2.yaml
configs/dataset_import/: default.yaml  flowcamnet.yaml  global_uvp5net.yaml  isiisnet.yaml  jedi_oceans_cpics.yaml  lensless.yaml  medplanktonset.yaml  planktonset1.yaml  planktoscope.yaml  syke_ifcb_2022.yaml  sykezooscan2024.yaml  uvp6net.yaml  whoi-plankton.yaml  zoocamnet.yaml  zoolake.yaml  zooscannet.yaml
configs/dataset_ood/: default.yaml  lensless.yaml  planktonzilla_ood.yaml
configs/debug/: default.yaml
configs/experiment/: base_cifar10.yaml  base_cifar100.yaml  base_inaturalist.yaml  base_jedi.yaml  base_lensless.yaml  base_whoi.yaml  base_zoolake.yaml  base_zoolake_transformers-vit.yaml  base_zooscan.yaml  default.yaml  test.yaml
configs/extras/: default.yaml
configs/hparams_search/: optuna.yaml
configs/hydra/: default.yaml
configs/model/: beit-base.yaml  default.yaml  default_clip.yaml  eva02-large-clip-224-2b-s4b-b131k.yaml  eva02-large-clip-224-pt-planktonzilla_loss.yaml  eva02-large-clip-224-pt-planktonzilla_loss_32000.yaml  resnet18.yaml  vit-base.yaml  (+13 more)
notebooks/: 01.Metadataset.ipynb  02. Metadataset_clean.ipynb  add_planktonzilla.py  fix_taxo.ipynb  gen_datasets.ipynb  gen_planktonzilla.py  gen_planktonzilla_ood.py  load_models.ipynb  metrics_clip.ipynb  metrics_paper.ipynb  mod_planktonzilla_orane.py  planktonzilla_taxonomy.csv  planktonzilla_taxonomy_final.csv  planktonzilla_taxonomy_final_final.csv  planktonzilla_taxonomy_v3.csv  push_planktonzilla.py  push_planktonzilla_plankton.py  save_planktonzilla.py  save_planktonzilla2.py  save_planktonzilla_for_clip.py  script_orane.py  whoi1.py
ood_planktonzilla/: .gitignore  main.py
planktonzilla/: clip_model.py  dataset.py  loss.py  train.py  train_node.py  train_ood.py
scripts/: gen_ood_dataset.sh  push_dataset.sh  push_ood.sh  push_planktonzilla.sh  save_plankt_plus.sh  train.sh  train_clip.sh  train_ood.sh  train_ood2.sh
tests/: __init__.py  conftest.py  shared.py  test_datasets.py  test_train.py
(+48 files in other folders)
