[project]
name = "planktonzilla"
version = "0.1.1"
description = "Deep learning methods for plankton identification"
authors = [{ name = "Inria Chile", email = "info@inria.cl" }]
license = "mit"
readme = "README.md"
keywords = ["deep learning", "computer vision", "plankton images"]
requires-python = ">=3.11,<3.14"

[project.urls]
homepage = "https://oceania.inria.cl/"
repository = "https://github.com/Inria-Chile/deep_plankton"
# documentation = "https://python-poetry.org/docs/"
"Bug Tracker" = "https://github.com/Inria-Chile/deep_plankton/issues"

[tool.poetry]
packages = [{ include = "planktonzilla" }]
include = ["pyproject.toml", { path = "configs" }]

# [tool.poetry.dependencies]
# torch = "^2.7.1"
# datasets = "^3.6.0"
# transformers = "^4.52.4"
# timm = "^1.0.15"
# hydra-core = "^1.3.2"
# hydra-colorlog = "^1.2.0"
# hydra-optuna-sweeper = "^1.2.0"
# hydra-submitit-launcher = "^1.2.0"
# submitit-oar = "^1.1.1"

# pyrootutils = "^1.0.4"
# peft = "^0.15.2"
# torchvision = "^0.22.1"
# rich = "^14.0.0"
# torchsampler = "^0.1.2"
# humanize = "^4.12.3"
# tqdm = "^4.67.1"
# deepspeed = "^0.17.1"

# wandb = "^0.20.1"
# humanhash3 = "^0.0.6"
# tabulate = "^0.9.0"
# mlflow = "2.22.1"


[tool.poetry.dependencies]
hydra-core = "^1.3.2"
hydra-colorlog = "^1.2.0"
hydra-submitit-launcher = "^1.2.0"
evaluate = "^0.4.6"
datasets = "^4.2.0"
transformers = "^4.57.0"
wandb = "^0.22.2"
tabulate = "^0.9.0"
tqdm = "^4.67.1"
torchvision = "^0.23.0"
pyrootutils = "^1.0.4"
rich = "^14.2.0"
accelerate = "^1.10.1"
timm = "^1.0.20"
scikit-learn = "^1.7.2"
humanize = "^4.13.0"
deepspeed = "^0.18.0"
peft = "^0.17.1"
plotext = "^5.3.2"

[tool.ruff]
line-length = 128
lint.select = [
    "F",    # Pyflakes
    "E",    # Pycodestyle
    "W",
    "I",    # isort
    "N",    # pep8-naming
    "NPY",  # NumPy-specific rules
    "PERF", # Perflint
    "FURB", # refurb
    "PD",   # pandas-vet
    "RUF",  # Ruff-specific rules
]
lint.ignore = ["E402", "N806"]
exclude = [
    "notebooks/", # do not check notebooks
]

[tool.pytest.ini_options]
addopts = "--doctest-modules --log-cli-format='%(asctime)s [%(levelname)7s] %(message)s (%(filename)s:%(lineno)s)' --log-cli-date-format='%Y-%m-%d %H:%M:%S'"
junit_family = "xunit2"
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
norecursedirs = ".venv"                                                                                                                                       # old_modules to be removed in the future

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
pz_import_dataset = 'planktonzilla.dataset_import.import_dataset:main'
pz_prepare_train = 'planktonzilla.prepare_train:main'
pz_train = 'planktonzilla.train:main'
pz_push_model = 'planktonzilla.push_model:main'

[dependency-groups]
dev = ["pytest", "notebook", "ipywidgets", "pytest-cov", "ipykernel"]
